# nekotimer

./: Cargo.toml  timer.config
.github/workflows/: release_build.yaml
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  persistence.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs  state.rs
frontend/src/components/: block_canvas.rs  block_drop_zone.rs  content_pane.rs  countdown_block.rs  mod.rs  no_content.rs  running_timer_modal.rs  sidebar.rs  timer_builder.rs  timer_view.rs  unsaved_changes_modal.rs  wait_block.rs
frontend/src/services/: api.rs  mod.rs  timer_runner.rs
frontend/styles/: main.css
script/: nekotimer.service  run_back.ps1  run_front.ps1
shared/: Cargo.toml
shared/src/: model.rs
