[package]
name = "nekotimer-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
nekotimer-shared = { path = "../shared" }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
